Fix wrap of headings

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -243,7 +243,6 @@ main {
 
   .right-column-section {
     .title-with-period {
-      display: flex;
       > *:first-child {
         margin-right: .4em;
       }
